--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,43 +1,50 @@
+@import "../../.cache/wal/colors-waybar.css";
+@define-color bg @background;
+@define-color fg @foreground;
+@define-color textcolor @cursor;
+
 * {
-    border: none;
-    border-radius: 0;
-    font-family: JetBrainsMono Nerd Font, monospace;
-    font-weight: bold;
-    font-size: 14px;
-    min-height: 0;
+  border: none;
+  border-radius: 0;
+  font-family:
+    JetBrainsMono Nerd Font,
+    monospace;
+  font-weight: bold;
+  font-size: 14px;
+  min-height: 0;
 }
 
 window#waybar {
-    background: rgba(21, 18, 27, 0);
-    color: #cdd6f4;
+  background: rgba(21, 18, 27, 0);
+  color: @textcolor;
 }
 
 #workspaces button {
-    padding: 5px;
-    color: #555869;
-    margin-right: 5px;
+  padding: 5px;
+  color: #555869;
+  margin-right: 5px;
 }
 
 #workspaces button.active {
-    color: #a6adc8;
+  color: @textcolor;
 }
 
 #workspaces button.focused {
-    color: #a6adc8;
-    background: #eba0ac;
-    border-radius: 10px;
+  color: @textcolor;
+  background: #eba0ac;
+  border-radius: 10px;
 }
 
 #workspaces button.urgent {
-    color: #11111b;
-    background: #a6e3a1;
-    border-radius: 10px;
+  color: #11111b;
+  background: #a6e3a1;
+  border-radius: 10px;
 }
 
 #workspaces button:hover {
-    background: #cdd6f4;
-    color: #11111b; 
-    border-radius: 10px;
+  background: #cdd6f4;
+  color: #11111b;
+  border-radius: 10px;
 }
 
 #window,
@@ -50,74 +57,73 @@ window#waybar {
 #workspaces,
 #tray,
 #backlight {
-    background: #1e1e2e;
-    padding: 0px 10px;
-    margin: 3px 0px;
-    margin-top: 5px;
-    /* border: 1px solid #181825; */
+  background: @bg;
+  padding: 0px 10px;
+  margin: 3px 0px;
+  margin-top: 5px;
+  /* border: 1px solid #181825; */
 }
 
 #backlight {
-    border-radius: 10px 0px 0px 10px;
+  border-radius: 10px 0px 0px 10px;
 }
 
 #tray {
-    border-radius: 10px;
-    margin-right: 10px;
+  border-radius: 10px;
+  margin-right: 10px;
 }
 
 #workspaces {
-    background: #1e1e2e;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding-right: 0px;
-    padding-left: 5px;
+  background: @bg;
+  border-radius: 10px;
+  margin-left: 10px;
+  padding-right: 0px;
+  padding-left: 5px;
 }
 
 #cpu {
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
+  border-radius: 0px 10px 10px 0px;
+  margin-right: 10px;
 }
 
 #memory {
-    border-radius: 10px 0px 0px 10px;
+  border-radius: 10px 0px 0px 10px;
 }
 
 #window {
-    border-radius: 10px;
-    margin-left: 60px;
-    margin-right: 60px;
+  border-radius: 10px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 #clock {
-    color: #a6adc8;
-    border-radius: 10px 10px 10px 10px;
-    margin-left: 5px;
-    border-right: 0px;
+  color: @textcolor;
+  border-radius: 10px 10px 10px 10px;
+  margin-left: 5px;
+  border-right: 0px;
 }
 
 #network {
-    color:  #a6adc8;
-    border-radius: 10px 0px 0px 10px;
-
+  color: @textcolor;
+  border-radius: 10px 0px 0px 10px;
 }
 
 #pulseaudio {
-    color: #a6adc8;
-    border-left: 0px;
-    border-right: 0px;
+  color: @textcolor;
+  border-left: 0px;
+  border-right: 0px;
 }
 
 #pulseaudio.microphone {
-    color: #a6adc8;
-    border-radius: 0px 10px 10px 0px;
-    border-left: 0px;
-    border-right: 0px;
-    margin-right: 5px;
+  color: @textcolor;
+  border-radius: 0px 10px 10px 0px;
+  border-left: 0px;
+  border-right: 0px;
+  margin-right: 5px;
 }
 
 #battery {
-    color:#a6adc8;
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
+  color: @textcolor;
+  border-radius: 0px 10px 10px 0px;
+  margin-right: 10px;
 }
